--- a/scss/vanillajs-multi-select.scss
+++ b/scss/vanillajs-multi-select.scss
@@ -1,7 +1,9 @@
 .multi-selectbox {
   padding-left: 0;
   .dropdown-menu {
-    padding: 10px
+    padding: 10px;
+    max-height: 250px;
+    overflow-y: auto;
   }
   button {
     text-align: left;
